# flash-linear-attention_GDN_cp39

./: pyproject.toml  setup.py
fla/ops/simple_gla/: parallel.py
